api 基础服务上线

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,10 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/rent?useUnicode=true&characterEncoding=utf8
-jdbc.username=root
-jdbc.password=chenyuxiong123
+env=deploy
+#本地开发
+jdbc.deploy.driver=com.mysql.jdbc.Driver
+jdbc.deploy.url=jdbc:mysql://localhost:3306/rent?useUnicode=true&characterEncoding=utf8
+jdbc.deploy.user=root
+jdbc.deploy.pass=chenyuxiong123
+#远程开发
+jdbc.test.url=jdbc:mysql://115.159.119.52:3306/rent?useUnicode=true&characterEncoding=utf8
+jdbc.test.user=root
+jdbc.test.pass=65466007
