--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,25 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.5.4</version>
+      <version>2.8.8</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.8.8</version>
+    </dependency>
+
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
@@ -139,6 +153,12 @@
       <artifactId>commons-collections</artifactId>
       <version>3.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
     <dependency>
@@ -152,9 +172,68 @@
       <artifactId>thymeleaf-spring4</artifactId>
       <version>3.0.5.RELEASE</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all
+         springmvc 的测试辅助工具 mock
+    -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.10.19</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path.
+          mock 测试中检验json
+     -->
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>2.2.0</version>
+      <scope>test</scope>
+    </dependency>
+
+
 
   </dependencies>
+
+
+
+
+  <properties>
+    <warPackageName>1rmbhouse</warPackageName>
+    <tomcat.deploy.server>localTestServer</tomcat.deploy.server>
+    <tomcat.deploy.serverUrl>http://localhost/manager/text</tomcat.deploy.serverUrl>
+  </properties>
+
+  <profiles>
+    <profile>
+      <id>deploy2production</id>
+      <properties>
+        <tomcat.deploy.server>productionServer</tomcat.deploy.server>
+        <tomcat.deploy.serverUrl>http://115.159.119.52:8080/manager/text</tomcat.deploy.serverUrl>
+      </properties>
+    </profile>
+  </profiles>
+<!-- 发布到远程tomcat -->
   <build>
     <finalName>1rmbalpha</finalName>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+            <server>remote-tomcat8</server>
+            <url>${tomcat.deploy.serverUrl}</url>
+            <path>/</path>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>2.4</version>
+          <configuration>
+            <failOnMissingWebXml>false</failOnMissingWebXml>
+          </configuration>
+        </plugin>
+      </plugins>
   </build>
 </project>
