--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,6 +5,6 @@ jdbc.deploy.url=jdbc:mysql://localhost:3306/rent?useUnicode=true&characterEncodi
 jdbc.deploy.user=root
 jdbc.deploy.pass=chenyuxiong123
 #远程开发
-jdbc.test.url=jdbc:mysql://115.159.119.52:3306/rent?useUnicode=true&characterEncoding=utf8
+jdbc.test.url=jdbc:mysql://115.159.11.5:3306/rent?useUnicode=true&characterEncoding=utf8
 jdbc.test.user=root
-jdbc.test.pass=65466007
+jdbc.test.pass=6507
